Fix general api